--- a/Shopping-Cart/Views/Product/Index.cshtml
+++ b/Shopping-Cart/Views/Product/Index.cshtml
@@ -10,10 +10,6 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-@if (ViewBag.ResultMessage != null)
-{
-    @Html.Label("info", (string) ViewBag.ResultMessage, new {@class = "text-info" })
-}
 <table class="table">
     <tr>
         <th>
@@ -45,6 +41,9 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.PriceDiscount)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ImageUrl)
         </th>
         <th></th>
     </tr>
@@ -80,6 +79,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.PriceDiscount)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ImageUrl)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-default" })
