新增  其他頁面連結至導覽列 修改  購物車類別 新增  購物車相關功能

--- a/Shopping-Cart/Views/Shared/_Layout.cshtml
+++ b/Shopping-Cart/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                     <li>@Html.ActionLink("首頁", "Index", "Home")</li>
                     <li>@Html.ActionLink("關於", "About", "Home")</li>
                     <li>@Html.ActionLink("連絡人", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("商品管理", "Index", "Product")</li>
+                    <li>@Html.ActionLink("會員管理", "Index", "ManageUser")</li>
+                    <li id="Cart">@Html.Partial("_CartPartial")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
