新增  "商品加入購物車"按鈕

--- a/Shopping-Cart/Views/Shared/_CartPartial.cshtml
+++ b/Shopping-Cart/Views/Shared/_CartPartial.cshtml
@@ -6,9 +6,22 @@
     <span class="caret"></span>
 </a>
 <ul class="dropdown-menu" role="menu" aria-labelledby="CartDropDown">
-    @foreach(var cartitem in currentCart){
-        <li><a>@cartitem.Name <span>@cartitem.Price 元 X @cartitem.Quantity</span></a></li>
-     }
-    <li class="divider"></li>
-    <li><a class="btn btn-default text-center" href="#">結帳去</a> </li>
+    @if (currentCart.Count > 0)
+    {
+        foreach (var cartitem in currentCart)
+        {
+            <li>
+                <a>@cartitem.Name <span>@cartitem.Price 元 X @cartitem.Quantity</span></a>
+            </li>
+
+            <li class="divider"></li>
+            <li><a class="btn btn-default text-center" href="#">結帳去</a> </li>
+        }
+    }
+    else
+    {
+        <li><a class="btn btn-default text-center" href="#">購物車無任何商品</a></li>
+    }
+
+
 </ul>
