--- a/Shopping-Cart/Views/Shared/_Layout.cshtml
+++ b/Shopping-Cart/Views/Shared/_Layout.cshtml
@@ -56,6 +56,12 @@
             });
         }
     </script>
+
+    <style>
+        .dropdown-menu{width:220px}
+
+    </style>
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
