--- a/Shopping-Cart/Views/Shared/_CartPartial.cshtml
+++ b/Shopping-Cart/Views/Shared/_CartPartial.cshtml
@@ -17,7 +17,7 @@
 
             <li class="divider"></li>
             <li>
-                <a class="btn btn-default text-center col-xs-5" href="#">結帳去</a>
+                <a class="btn btn-default text-center col-xs-5" href="@Url.Action("Index","Order",new { })">結帳去</a>
                 <a class="btn btn-default text-center col-xs-5" href="#" onclick="ClearCart()">清空</a>
             </li>
         }
