--- a/Shopping-Cart/Views/Shared/_Layout.cshtml
+++ b/Shopping-Cart/Views/Shared/_Layout.cshtml
@@ -81,6 +81,7 @@
                     <li>@Html.ActionLink("連絡人", "Contact", "Home")</li>
                     <li>@Html.ActionLink("商品管理", "Index", "Product")</li>
                     <li>@Html.ActionLink("會員管理", "Index", "ManageUser")</li>
+                    <li>@Html.ActionLink("訂單管理", "Index", "ManageOrder")</li>
                     <li id="Cart">@Html.Partial("_CartPartial")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
